# edahelperg5

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/edahelperg5/: __init__.py
tests/: test_edahelperg5.py
